# komga-anilist-fetcher

./: Cargo.toml  LICENSE  README.md
src/: anilist.rs  config.rs  komga.rs  main.rs
